--- a/src/content/variables.scss
+++ b/src/content/variables.scss
@@ -4,3 +4,5 @@ $contextBackground: #254a61;
 $textColor: #fff;
 $mainBackground: rgba(34,34,34,.712);
 $lightBackground: rgba(82, 82, 82, 0.712);
+$lighterBackground: rgba(63, 63, 63, 0.712);
+$dialogBackground: #fff999!important;
