--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,7 @@ body {
 // =============================== .mat-bottom-sheet-container ======================
 .mat-bottom-sheet-container{
     // background: #fffaca!important;
-    background: #fff999!important;
+    background: $dialogBackground;
     color: black;
 }
 
