--- a/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
+++ b/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
@@ -1,3 +1,5 @@
+@import './../../../../content/variables';
+ 
 // --------------------- NAV CONTAINER -------------------
 .nav-container{
     width: 100%;
@@ -42,7 +44,8 @@
     margin: 3px;
     // background: rgb(139, 139, 139);
     // opacity: 0.3;
-    background: rgba(63, 63, 63, 0.712);
+    //background: rgba(63, 63, 63, 0.712);
+    background: $lighterBackground;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -84,18 +87,21 @@
 .brick-type-container{
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .card-category-name{
-    font-size: 18px;
-    //font-weight: bold;
-    margin: 40px auto;
+    font-size: 14px;
+    margin: 10px auto;
     text-align: center;
+    font-weight: 300;
 }
 
 .card-brick-type-icon{
     font-size: 22px;
-    margin: 20px auto 5px;
+    margin: 5px auto 5px;
     text-align: center;
     .material-icons{
         font-size: 30px;
@@ -105,7 +111,7 @@
 .card-brick-type-name{
     font-size: 20px;
     font-weight: bold;
-    margin: 5px auto;
+    margin: 20px auto 5px;
     text-align: center;
 }
 
@@ -118,3 +124,48 @@
     height: 100%;
 }
 
+.card-brick-type-desc{
+    display: block;
+    min-height: 80px;
+    max-height: 80px;
+    margin: 10px;
+    padding: 5px;
+    background: #fff999 !important;
+    color: rgb(110, 52, 9);
+    border: 2px solid black;
+    border-radius: 6px;
+    overflow: hidden;
+    /* overflow-wrap: unset; */
+}
+
+.card-brick-type-details{
+    display: flex;
+    justify-content: space-between;
+
+    margin: 0 10px;
+    .brick-type-type{
+        background: $lighterBackground;
+    }
+    .brick-type-type::after {
+        border-color: transparent transparent transparent #383838;
+    }    
+    .brick-type-type::before{
+        border-color: #383838 transparent;
+    }
+    .brick-type-counts{
+        font-size: 10px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-grow:1;
+        padding: 0 3px;
+    }
+    .marked-days{
+        color: #acd9ff;
+    }
+    .skipped-days{
+        color: #fc9f9f;
+        font-size: 9px;
+    }
+}
