--- a/src/app/userSetting/categoryNew/category-container/category-container.component.html
+++ b/src/app/userSetting/categoryNew/category-container/category-container.component.html
@@ -1,6 +1,6 @@
 <div>
     <category-list
-        [categories]="films$ | async"
+        [categories]="categories$ | async"
         (select)="onSelect($event)">
     </category-list>
 
