--- a/src/app/userSetting/categoryNew/category-item/category-item.component.html
+++ b/src/app/userSetting/categoryNew/category-item/category-item.component.html
@@ -1,1 +1,1 @@
-<li (click)="select.emit(category.id)" *ngIf="category">{{category.name}}</li>
+<li (click)="select.emit(category._id)" *ngIf="category">{{category.name}}</li>
