--- a/src/app/userSetting/categoryNew/category-selected/category-selected.component.html
+++ b/src/app/userSetting/categoryNew/category-selected/category-selected.component.html
@@ -1,4 +1,6 @@
-<div *ngIf="category && category.name" [ngStyle]="{'background-color': category.color}">
+<div *ngIf="category"
+     [ngStyle]="{'background-color': category.color}">
+    cat selected
     <h1>{{category.name}}</h1>
     <p>{{category.description}}</p>
 </div>
