fixed html problem for prod

--- a/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.html
+++ b/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.html
@@ -1,8 +1,10 @@
 <div class="brick-type-cards">
 
     <div class="nav-container">
-        <mat-checkbox [(ngModel)]="isSortBrickType" (change)="sort()">Сортировать</mat-checkbox>
-        <mat-checkbox [(ngModel)]="isRemovedShown" (change)="showRemoved()">Показать удаленные</mat-checkbox>
+        <!-- <mat-checkbox [(ngModel)]="isSortBrickType" (change)="sort()">Сортировать</mat-checkbox>
+        <mat-checkbox [(ngModel)]="isRemovedShown" (change)="showRemoved()">Показать удаленные</mat-checkbox> -->
+        <mat-checkbox [(ngModel)]="isSortBrickType" >Сортировать</mat-checkbox>
+        <mat-checkbox [(ngModel)]="isRemovedShown" >Показать удаленные</mat-checkbox>
     </div>
     
     <!-- LIST of BRICK TYPE-->
