--- a/src/app/userSetting/frend/frend-list/frend-list.component.html
+++ b/src/app/userSetting/frend/frend-list/frend-list.component.html
@@ -9,33 +9,32 @@
             <td>
                 <!-- request -->
                 <!-- record_voice_over -->
-                <mat-icon class="yellow-icon" 
+                <!-- <mat-icon class="yellow-icon" 
                     *ngIf="frend.statusId == 1"
                     matTooltip="Запрос в друзья" matTooltipPosition="left">
                     accessibility_new
-                </mat-icon>
+                </mat-icon> -->
 
                 <!-- deleted -->
-                <mat-icon class="red-icon" 
+                <!-- <mat-icon class="red-icon" 
                     *ngIf="frend.statusId == 5"
                     matTooltip="Удален из друзей" matTooltipPosition="left">
                     highlight_off
-                </mat-icon>
+                </mat-icon> -->
 
                 <!-- approved -->
-                <mat-icon class="gren-icon" 
+                <!-- <mat-icon class="gren-icon" 
                     *ngIf="frend.statusId == 3"
                     matTooltip="В друзьях" matTooltipPosition="left">
                     account_circle
-                </mat-icon>
+                </mat-icon> -->
 
                 <!-- rejected -->
-                <mat-icon class="plum-icon" 
+                <!-- <mat-icon class="plum-icon" 
                     *ngIf="frend.statusId == 2"
                     matTooltip="Запрос отклонен" matTooltipPosition="left">
                     sentiment_very_dissatisfied
-                    <!-- person_add_disabled -->
-                </mat-icon>
+                </mat-icon> -->
             </td>
             <td> 
                 <a class="link-button" routerLink="/wall/{{frend.frendNickname}}" translate>
