--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -34,7 +34,7 @@
         </div>        
     </div>
       
-      <div class="one-day tooltip" [ngClass]="{'day-weekend': curday.isWeekend, 'day-today': curday.today, 'day-disabled': curday.disabled, 'day-pointer': !curday.disabled && !curNick}"
+      <div class="one-day" [ngClass]="{'day-weekend': curday.isWeekend, 'day-today': curday.today, 'day-disabled': curday.disabled, 'day-pointer': !curday.disabled && !curNick}"
             *ngFor="let curday of daysArray"
             (click)="openBrickModal(brick, curday, $event)">
 
