--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,17 +11,17 @@
 
             <mat-menu #navButtons="matMenu" class="nav-menu">
                 <button mat-menu-item routerLink="/wall" *ngIf="authService.CurrentUser">{{'Wall' | translate}}</button>
-                <button mat-menu-item routerLink="/userSetting/category" *ngIf="authService.CurrentUser">{{'Category' | translate}}</button>
-                <button mat-menu-item routerLink="/userSetting/brickTypeCards" *ngIf="authService.CurrentUser">{{'Goals' | translate}}</button>
-                <button mat-menu-item routerLink="/userSetting/frends" *ngIf="authService.CurrentUser">{{'Друзья' | translate}}</button>
-                <button mat-menu-item routerLink="/userSetting/categoryContainer" *ngIf="authService.CurrentUser">{{'Category New' | translate}}</button>
+                <button mat-menu-item routerLink="/category" *ngIf="authService.CurrentUser">{{'Category' | translate}}</button>
+                <button mat-menu-item routerLink="/brickTypeCards" *ngIf="authService.CurrentUser">{{'Goals' | translate}}</button>
+                <button mat-menu-item routerLink="/frends" *ngIf="authService.CurrentUser">{{'Друзья' | translate}}</button>
+                <button mat-menu-item routerLink="/categoryContainer" *ngIf="authService.CurrentUser">{{'Category New' | translate}}</button>
             </mat-menu>
 
             <button mat-button class="nav-button" routerLink="/wall" *ngIf="authService.CurrentUser">{{'Wall' | translate}}</button>
-            <button mat-button class="nav-button" routerLink="/userSetting/category" *ngIf="authService.CurrentUser">{{'Category' | translate}}</button>
-            <button mat-button class="nav-button" routerLink="/userSetting/brickTypeCards" *ngIf="authService.CurrentUser">{{'Goals' | translate}}</button>
-            <button mat-button class="nav-button" routerLink="/userSetting/frends" *ngIf="authService.CurrentUser">{{'Друзья' | translate}}</button>
-            <button mat-button class="nav-button" routerLink="/userSetting/categoryContainer" *ngIf="authService.CurrentUser">{{'Category New' | translate}}</button>
+            <button mat-button class="nav-button" routerLink="/category" *ngIf="authService.CurrentUser">{{'Category' | translate}}</button>
+            <button mat-button class="nav-button" routerLink="/brickTypeCards" *ngIf="authService.CurrentUser">{{'Goals' | translate}}</button>
+            <button mat-button class="nav-button" routerLink="/frends" *ngIf="authService.CurrentUser">{{'Друзья' | translate}}</button>
+            <button mat-button class="nav-button" routerLink="/categoryContainer" *ngIf="authService.CurrentUser">{{'Category New' | translate}}</button>
         </div>
     </div>
 
