--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -24,7 +24,7 @@
 
         <!-- Password -->
         <mat-form-field>
-            <input type="password" matInput required placeholder="{{'Password'}}" 
+            <input type="password" matInput required placeholder="{{'Password' | translate}}" 
                 formControlName="password">
             <mat-error *ngIf="regForm.controls.password.errors?.required">
                 Поле обязательное для заполнения
@@ -36,7 +36,7 @@
 
         <!-- Nickname -->
         <mat-form-field>
-            <input type="nickname" matInput required placeholder="{{'Nickname'}}" 
+            <input type="nickname" matInput required placeholder="{{'Nickname' | translate}}" 
                 formControlName="nickname">
             <mat-error *ngIf="regForm.controls.nickname.errors?.required">
                 Поле обязательное для заполнения
@@ -44,7 +44,7 @@
         </mat-form-field>
 
         <button mat-raised-button color="primary" [disabled]="regForm.invalid">
-                {{'CreateAccount'}}
+                {{'CreateAccount' | translate}}
         </button>
 
     </form>
