--- a/src/styles.scss
+++ b/src/styles.scss
@@ -256,9 +256,13 @@ h5 {
     border-color: transparent black transparent transparent;
 }
 
-// =========================== TEXT SHADOW ======================================
+// =========================== SHADOW ======================================
 .text-shadow{
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+}
+
+.hard-box-shadow{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
 }
 
 // -======================= PARTICLE JS ===================
