--- a/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
+++ b/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
@@ -21,14 +21,13 @@
 // ------------------------brick-type-cards--------------------
 .brick-type-cards{
     position: relative;
-    //max-width: 960px;
     max-width: 90%;
     min-width: 270px;
     margin: auto auto;
     padding: 10px;
     display: flex;
     flex-direction: row;
-    //justify-content: space-between;
+    justify-content: stretch;
     flex-wrap: wrap;
     color: white;
 }
@@ -36,15 +35,13 @@
 .brick-type-card{
     position: relative;
     box-sizing: border-box;
-    min-width: 200px;
-    //width: 91px;
+    // min-width: 180px;
+    // max-width: 250px;
+    min-width: 180px;
     max-width: 250px;
-    //flex-grow: 1;
     height: 300px;
     margin: 3px;
-    // background: rgb(139, 139, 139);
-    // opacity: 0.3;
-    //background: rgba(63, 63, 63, 0.712);
+
     background: $lighterBackground;
     display: flex;
     flex-direction: column;
@@ -53,7 +50,8 @@
     flex-wrap: wrap;
     border: 1px solid rgb(70, 70, 70);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    flex-basis: 13.6%;
+    //flex-basis: 15%;
+    flex: 1 0 200px;
     .brick-type-container{
         opacity: 1;
         transition: .8s opacity;
@@ -122,13 +120,14 @@
     justify-content: space-around;
     align-items: center;
     height: 100%;
+    width: 100%;
 }
 
 .card-brick-type-desc{
     display: block;
     min-height: 80px;
     max-height: 80px;
-    margin: 10px;
+    margin: 0 10px 10px;
     padding: 5px;
     background: #fff999 !important;
     color: rgb(110, 52, 9);
@@ -142,7 +141,7 @@
     display: flex;
     justify-content: space-between;
 
-    margin: 0 10px;
+    margin: 0 10px 10px;
     .brick-type-type{
         background: $lighterBackground;
     }
@@ -191,4 +190,46 @@
     .closed-status    {background-color: #575757;}
     .successed-status {background-color: #3eff5f;}
     .failed-status    {background-color: #c90000;}
+}
+
+
+// ======================= MEDIA =====================
+@media screen and(max-width: 460px){
+    .brick-type-card{
+        flex-basis: 32%;
+        height: 120px;
+        min-width: 70px;
+        max-width: 100px;
+    }
+    .card-brick-type-desc{
+        display: none;
+    }
+    .show-details{
+        top: 60px!important;
+        font-size: 16px;
+    }
+    .card-brick-type-name{
+        font-size: 14px;
+        margin: 10px auto 5px;
+        width: 50%;
+        height: 40px;
+        overflow: hidden;
+    }
+    .brick-type-container{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .card-brick-type-icon {
+        margin: 15px auto 5px;
+    }
+    .status-on-card{
+        width: 70px!important;
+        height: 20px!important;
+        order: 3;
+    }
+    .card-brick-type-details {
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 0 5px 5px;
+    }
 }
