--- a/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
+++ b/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
@@ -204,9 +204,11 @@
     .card-brick-type-desc{
         display: none;
     }
-    .show-details{
-        top: 60px!important;
-        font-size: 16px;
+    .brick-type-card:hover{
+        .show-details{
+            top: 40px!important;
+            font-size: 16px!important;
+        }
     }
     .card-brick-type-name{
         font-size: 14px;
