style fix and fix for WIN status

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,4 @@
+<div class="auth-container">
     <mat-card class="auth-form">
         <form [formGroup]='loginForm' (submit)="login()">
 
@@ -26,3 +27,4 @@
         </form>
 
     </mat-card>
+</div>
