--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -1,6 +1,12 @@
-.registration{
-    width: 700px;
+.reg-container{
+    max-width: 360px;
+    max-width: 700px;
     margin: 10px auto;
+}
+
+
+.registration{    
+    margin: 10px;
     display: flex;
     flex-direction: column;
     form {
