Fixed Header, Wall Side Changes, Update NgRx

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 
 <div class="main-app">
-    <div class="menu-on-home" *ngIf="router.url != '/home'">
+    <div class="menu-on-home"> 
+        <!-- *ngIf="router.url != '/home'"> -->
         <header-menu></header-menu>
     </div>
 
