--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,7 +2,8 @@
 <wall-side-nav 
     [nickName]="nicknameForSideBar"
     [visibleBrickTypes]="existentBrickTypes"
-    (tickBrickType)="filterByHabbit($event)">
+    (tickBrickType)="filterByHabbit($event)"
+    (tickCategory)="filterByCategory($event)">
         Wall Side Nav
 </wall-side-nav>
 
