--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,9 +8,9 @@
         </div>
         <div class="first-section">
                     
-            <div>
+            <!-- <div>
                 <header-menu></header-menu>
-            </div>
+            </div> -->
             <div class="first-screen">
                 <div class="left-home-continer">
                     <div class="main-words">
