--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,12 +1,13 @@
 
 .header-menu{
-    //position: fixed;
+    position: fixed;
+    z-index: 1000;
     width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     color: white;
-    background-color: rgba(17, 17, 17, 0.527);
+    background-color: rgba(47, 47, 47, 0.827);
     padding: 10px;
     box-sizing: border-box;
     button, locale-change{
