--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -210,6 +210,7 @@ $hexagon-index: 0.3;
 // ============================ PARALLAX FROM TRAVIS =================================
 
 .home-page{ 
+    margin-top: -60px;
     font-size: 16px;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
