--- a/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
+++ b/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.scss
@@ -24,7 +24,7 @@
     max-width: 90%;
     min-width: 270px;
     margin: auto auto;
-    padding: 10px;
+    //padding: 10px;
     display: flex;
     flex-direction: row;
     justify-content: stretch;
