--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -248,7 +248,10 @@ $hexagon-index: 0.3;
 
 
 .pimg1{
-    background-image: url(../../images/86642222.jpg);
+    //background-image: url(../../images/86642222.jpg);
+    background-image: url(../../images/yycoos.jpg);
+    //background-image: url(../../images/yyd729.jpg);
+    //background-image: url(../../images/jqyysf10.jpg);
     height: 200vh;
     width: 100%;
     position: absolute;
