--- a/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.html
+++ b/src/app/userSetting/brickTypeCards/brick-type-cards-centre/brick-type-cards-centre.component.html
@@ -6,7 +6,7 @@
         <mat-checkbox [(ngModel)]="isSortBrickType" >Сортировать</mat-checkbox>
         <mat-checkbox [(ngModel)]="isRemovedShown" >Показать удаленные</mat-checkbox>
         
-        <button mat-raised-button class="navigate-btn float-right" (click)="openBrickModal()">Добавить Новую</button>
+        <button mat-raised-button class="navigate-btn float-right" (click)="openBrickModal(null)">Добавить Новую</button>
     </div>
     <!-- <div (click)="updateSkippedDaysForPeriod()">RECOUNT SKIPP DAYS</div> -->
     <!-- LIST of BRICK TYPE-->
